Changes to be committed: 	modified:   base/__pycache__/config.cpython-36.pyc 	modified:   base/__pycache__/run.cpython-36.pyc 	modified:   base/app/__init__.py 	modified:   base/app/__pycache__/__init__.cpython-36.pyc 	modified:   base/app/__pycache__/forms.cpython-36.pyc 	new file:   base/app/__pycache__/listingsearch.cpython-36.pyc 	modified:   base/app/__pycache__/models.cpython-36.pyc 	modified:   base/app/__pycache__/routes.cpython-36.pyc 	new file:   base/app/backup/__init__.py.bak 	new file:   base/app/backup/static.zip 	new file:   base/app/backup/templates.zip 	modified:   base/app/forms.py 	modified:   base/app/models.py 	modified:   base/app/routes.py 	modified:   base/app/static/js/SpryValidationTextField.css 	modified:   base/app/templates/applicantinfo.html 	modified:   base/app/templates/applyjob.html 	modified:   base/app/templates/editlisting.html 	modified:   base/app/templates/findjobs.html 	modified:   base/app/templates/index_admin.html 	modified:   base/app/templates/index_reg.html 	modified:   base/app/templates/myjobs.html 	modified:   base/app/templates/mylistings.html 	modified:   base/app/templates/myprofile.html 	modified:   base/app/templates/register2.html 	modified:   base/config.py 	new file:   base/migrations/versions/0652eaa5d350_.py 	new file:   base/migrations/versions/616e44f531b7_.py 	new file:   base/migrations/versions/__pycache__/0652eaa5d350_.cpython-36.pyc 	new file:   base/migrations/versions/__pycache__/616e44f531b7_.cpython-36.pyc 	modified:   base/run.py
 Untracked files:
	base.zip
	venv/

--- a/base/app/templates/applicantinfo.html
+++ b/base/app/templates/applicantinfo.html
@@ -185,10 +185,10 @@
         </button>
       </div>
       <div class="modal-body">
-       dun so bad leh
+       Reject Applicant?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">ok la dont so bad</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
         <form method="post">
           {{ form2.hidden_tag() }}
         {{ form2.submit(class_='btn btn-danger') }}
