--- a/base/app/templates/index_admin.html
+++ b/base/app/templates/index_admin.html
@@ -78,7 +78,7 @@
 
     <!-- Page Content -->
     <div class="container">
-      <br><br><br><br>
+      <br><br><br><br><br>
 
       <h1 style="text-align:center">My Dashboard</h1>
         <br>
@@ -143,10 +143,10 @@
   <div class="card-header">
     <ul class="nav nav-tabs card-header-tabs pull-right"  id="myTab" role="tablist">
       <li class="nav-item">
-       <a class="nav-link active" id="home-tab" data-toggle="tab" href="#stat1" role="tab" aria-controls="stat1" aria-selected="true">Applicants</a>
+       <a class="nav-link active text-success" id="home-tab" data-toggle="tab" href="#stat1" role="tab" aria-controls="stat1" aria-selected="true">Applicants</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#stat2" role="tab" aria-controls="stat2" aria-selected="false">Impressions</a>
+        <a class="nav-link text-danger" id="profile-tab" data-toggle="tab" href="#stat2" role="tab" aria-controls="stat2" aria-selected="false">Impressions</a>
       </li>
 
     </ul>
