--- a/base/app/templates/applyjob.html
+++ b/base/app/templates/applyjob.html
@@ -38,7 +38,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="{{ url_for('findjobs') }}">Find Jobs</a>
             </li>
-
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('findjobs') }}">More Jobs</a>
+            </li>
             {% if current_user.role == 'regular' %}
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('myjobs') }}">My Jobs</a>
