--- a/base/app/templates/index_reg.html
+++ b/base/app/templates/index_reg.html
@@ -40,6 +40,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('findjobs') }}">Find Jobs</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('findjobs') }}">More Jobs</a>
+            </li>
 
             {% if current_user.role == 'regular' %}
             <li class="nav-item">
