--- a/base/app/templates/register2.html
+++ b/base/app/templates/register2.html
@@ -18,6 +18,24 @@
     <link href="{{url_for('static',filename='css/animate.css')}}" rel="stylesheet">
     <link href="{{url_for('static',filename='js/SpryValidationTextField.css')}}" rel="stylesheet">
     <script src="{{url_for('static',filename='js/SpryValidationTextField.js')}}"></script>
+    <script type="text/javascript">
+function MM_validateForm() { //v4.0
+  if (document.getElementById){
+    var i,p,q,nm,test,num,min,max,errors='',args=MM_validateForm.arguments;
+    for (i=0; i<(args.length-2); i+=3) { test=args[i+2]; val=document.getElementById(args[i]);
+      if (val) { nm=val.name; if ((val=val.value)!="") {
+        if (test.indexOf('isEmail')!=-1) { p=val.indexOf('@');
+          if (p<1 || p==(val.length-1)) errors+='- '+nm+' must contain an e-mail address.\n';
+        } else if (test!='R') { num = parseFloat(val);
+          if (isNaN(val)) errors+='- '+nm+' must contain a number.\n';
+          if (test.indexOf('inRange') != -1) { p=test.indexOf(':');
+            min=test.substring(8,p); max=test.substring(p+1);
+            if (num<min || max<num) errors+='- '+nm+' must contain a number between '+min+' and '+max+'.\n';
+      } } } else if (test.charAt(0) == 'R') errors += '- '+nm+' is required.\n'; }
+    } if (errors) alert('The following error(s) occurred:\n'+errors);
+    document.MM_returnValue = (errors == '');
+} }
+</script>
 
   </head>
 
@@ -33,59 +51,56 @@
           <img src="{{url_for('static',filename='img/$MU_blk.png')}}" width="auto" height="74" alt="" style="padding-left:10px;">
           <br><p><i>Curated for poor college students.</i></p>
           <br>
-        <form action="" method="post">
-          {{ form.hidden_tag() }}
-
-            <h5><b>Register</b></h5>
-
-            <br>
-            <div class="form-group">
-              <label for="exampleInputEmail2">EmailTest</label>
-              <span id="spry_email">
-                  {{ form.email(size=32,class_ ='form-control ',placeholder="Email",required='required') }}<br>
-              <span class="textfieldRequiredMsg">Email address is required.</span><span class="textfieldInvalidFormatMsg">Please type a valid email address.</span></span>
-
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email</label>
-              <span id="spry_email">
-
-              {{ form.email(size=32,class_ ='form-control ',placeholder="Email",required='required') }}<br>
-            {% for error in form.email.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-            {% if not_smu_email == True %}
-            <span style="color: red;">[Please enter an SMU Email.]</span>
-            {% endif %}
-            </div>
-
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-
-              {{ form.password(size=32,class_ ='form-control',placeholder="Password",required='required') }}<br>
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-            </div>
+          <form method="post" action="">
+            {{ form.hidden_tag() }}
+    <p></p>
 
 
-            <div class="form-group">
-              <label for="exampleInputPassword1">Confirm Password</label>
+    <table width="50%" border="0" align="center" cellspacing="0" class="LABEL">
+      <h5><b>Register</b></h5>
 
-              {{ form.password2(size=32,class_ ='form-control',placeholder="Confirm Password",required='required') }}<br>
-            {% for error in form.password2.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-            </div>
+      <br>
+<tr>
+  <div class="form-group">
+      <span id="spry_email">
+    <label for="exampleInputEmail1">Email</label> <br>
+    {{ form.email(size=32,class_ ='form-control ',placeholder="Email",required='required') }}
+    {% for error in form.email.errors %}
+    <span style="color: red;">[{{ error }}]</span>
+    {% endfor %}
+  <span class="textfieldInvalidFormatMsg" >Please type a valid email address.</span>
+    {% if not_smu_email == True %}
+    <span style="color: red;">[Please enter an SMU Email.]</span>
+    {% endif %}
+</span>
+</tr>
+<div class="form-group">
+  <label for="exampleInputPassword1">Password</label> <br>
 
 
+                {{ form.password(size=32,class_ ='form-control',placeholder="Password",required='required') }}
+              {% for error in form.password.errors %}
+              <span style="color: red;">[{{ error }}]</span>
+              {% endfor %}
+
+</div>
+<div class="form-group">
+  <label for="exampleInputPassword2">Confirm Password</label> <br>
+  {{ form.password2(size=32,class_ ='form-control',placeholder="Confirm Password",required='required') }} <br>
+{% for error in form.password2.errors %}
+<span style="color: red;">[{{ error }}]</span>
+{% endfor %}
+</div>
 
 
-            <br>
+      <tr>
+        <td>&nbsp;</td>
+        <td><input name="submit" type="submit" class="btn btn-primary" id="submit" onClick="MM_validateForm('Email','','RisEmail','Password','','R','ConfirmPassword','','R');return document.MM_returnValue" value="Register">      </td>
+      </tr>
+    </table> <br>
+    <a href="/login">Existing User?</a>
+    </form>
 
-            {{ form.submit(class_='btn btn-primary') }}
-            <br><br>
-            <a href="/login">Existing User?</a>
-      </form>
       </div>
     </div>
   </div>
@@ -96,6 +111,11 @@
 
     <script src="{{url_for('static',filename='vendor/jquery/jquery.min.js')}}"></script>
     <script src="{{url_for('static',filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+    <script type="text/javascript">
+var sprytextfield1 = new Spry.Widget.ValidationTextField("spry_nric", "social_security_number", {validateOn:["blur"], format:"ssn_custom", pattern:"A0000000A", useCharacterMasking:true});
+var sprytextfield2 = new Spry.Widget.ValidationTextField("spry_hp", "phone_number", {validateOn:["blur"], format:"phone_custom", pattern:"00000000", useCharacterMasking:true});
+var sprytextfield3 = new Spry.Widget.ValidationTextField("spry_email", "email", {validateOn:["blur"]});
+</script>
     <script>
     $('#myModal').modal({
       backdrop: 'static'
